access to use camera

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body class="bg-slate-900 text-white">
     <div class="container px-16 py-6">
-        <div>
-            <h2>JScreen - Take picture javascript</h2>
+        <div class="text-center">
+            <h2 class="text-2xl text-slate-300">JScreen - Take picture javascript</h2>
         </div>
-        <div>
-            <video autoplay width="400" height="300" src=""></video>
-            <img width="400" height="3000" src="" alt="">
+        <div class="flex  justify-center  items-center mt-20">
+            <video autoplay width="300" height="300" src=""></video>
+            <img width="300" height="200" src="" alt="">
         </div>
         <div>
             <p></p>
