take screenshot and save iamge

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <video autoplay width="300" height="300" src=""></video>
             <img width="300" height="200" src="" alt="">
         </div>
-        <div>
-            <p></p>
+        <div class="text-center">
+            <p class="py-3 font-light text-sm italic">Press <mark class="px-1 bg-indigo-600 text-slate-200">P</mark> key to take screen shot</p>
         </div>
     </div>
 </body>
